Use global hooks